--- a/Spectral Decomposition - Optical - Halpha.ipynb
+++ b/Spectral Decomposition - Optical - Halpha.ipynb
@@ -41,8 +41,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d8cb2af1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 43,
-   "id": "ff46c873",
+   "id": "e1f30054",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "45b9b82d",
+   "id": "e1492f25",
    "metadata": {},
    "outputs": [
     {
