--- a/Spectral Decomposition - Optical - Halpha.ipynb
+++ b/Spectral Decomposition - Optical - Halpha.ipynb
@@ -295,29 +295,26 @@
     "binned_err = np.array([np.mean(source_err[indices1 == i]) for i in range(len(bin_centers))])\n",
     "\n",
     "\n",
-    "# Plotting in a 3-grid format\n",
     "fig, axs = plt.subplots(nrows=3, ncols=1, figsize=(10, 18))\n",
     "\n",
     "# Source Flux\n",
-    "axs[0].plot(wavelength, binned_flux1, label='Source Flux', color='blue')\n",
+    "axs[0].plot(wavelength, binned_flux1, color='blue')\n",
     "axs[0].set_title('Source Flux vs. Wavelength')\n",
     "axs[0].set_xlabel('Wavelength (nm)')\n",
     "axs[0].set_ylabel('Flux')\n",
     "axs[0].legend()\n",
     "\n",
     "# Standard Flux\n",
-    "axs[1].plot(wavelength, binned_flux2, label='Standard Flux', color='orange')\n",
+    "axs[1].plot(wavelength, binned_flux2, color='orange')\n",
     "axs[1].set_title('Standard Flux vs. Wavelength')\n",
     "axs[1].set_xlabel('Wavelength (nm)')\n",
     "axs[1].set_ylabel('Flux')\n",
-    "axs[1].legend()\n",
     "\n",
     "# Corrected Source Flux\n",
-    "axs[2].plot(wavelength, binned_flux1 / binned_flux2, label='Corrected Source Flux', color='green')\n",
+    "axs[2].plot(wavelength, binned_flux1 / binned_flux2, color='green')\n",
     "axs[2].set_title('Corrected Source Flux vs. Wavelength')\n",
     "axs[2].set_xlabel('Wavelength (nm)')\n",
     "axs[2].set_ylabel('Flux')\n",
-    "axs[2].legend()\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
