--- a/Spectral Decomposition - Optical - Hbeta.ipynb
+++ b/Spectral Decomposition - Optical - Hbeta.ipynb
@@ -10817,7 +10817,7 @@
     "model = best_model\n",
     "xlabel = 'Wavelength [\\AA]'\n",
     "ylabel = '$f_\\lambda$ [10$^{-17}$ erg s$^{-1}$ cm$^{-2}$ \\AA$^{-1}$]'\n",
-    "plotfile = '../plots/j0950/plots/spec-52509-0902-0498'\n",
+    "plotfile = 'hbeta'\n",
     "HARDCOPY = False\n",
     "SHOW = True\n",
     "\n",
