--- a/Spectral Decomposition - Optical - Halpha.ipynb
+++ b/Spectral Decomposition - Optical - Halpha.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 186,
    "id": "expired-shipping",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,7 @@
     "import math\n",
     "import pylatex\n",
     "from matplotlib.gridspec import GridSpec\n",
+    "import matplotlib.ticker as ticker\n",
     "\n",
     "# pyqsofit\n",
     "from scipy import interpolate\n",
@@ -2558,7 +2559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "532cde09",
+   "id": "ab23296d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2566,7 +2567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e5a561f",
+   "id": "6989751c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2574,7 +2575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5b77fb9",
+   "id": "3f21b46b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2582,7 +2583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9b165ec",
+   "id": "a8fcaedb",
    "metadata": {},
    "outputs": [],
    "source": []
