--- a/Spectral Decomposition - Optical - Halpha.ipynb
+++ b/Spectral Decomposition - Optical - Halpha.ipynb
@@ -2385,7 +2385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 246,
    "id": "61cfa792",
    "metadata": {},
    "outputs": [
@@ -2411,7 +2411,7 @@
     "model = best_model\n",
     "xlabel = 'Wavelength (\\AA)'\n",
     "ylabel = 'f_{\\lambda}$ (10$^{-17}$ erg s$^{-1}$ cm$^{-2}$ \\AA$^{-1}$)'\n",
-    "plotfile = ''\n",
+    "plotfile = 'Figures/halpha'\n",
     "HARDCOPY = False\n",
     "SHOW = True\n",
     "\n",
@@ -2521,7 +2521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d404177",
+   "id": "2ef20fe2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2529,7 +2529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1acaca9",
+   "id": "25abfe28",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2537,7 +2537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4efeefe",
+   "id": "05a07704",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2545,7 +2545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ab3a868",
+   "id": "976e5ee6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2553,7 +2553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fbed4e3",
+   "id": "2d78daca",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2561,7 +2561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9569416",
+   "id": "7746fe4c",
    "metadata": {},
    "outputs": [],
    "source": []
