--- a/Spectral Decomposition - Optical - Halpha.ipynb
+++ b/Spectral Decomposition - Optical - Halpha.ipynb
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 1,
    "id": "statewide-herald",
    "metadata": {},
    "outputs": [],
@@ -766,8 +766,8 @@
     "    ax.set_xlim(wavemin,wavemax)\n",
     "    \n",
     "    ax.set_ylim(ymin,ymax)\n",
-    "    ax.set_xlabel(xlabel,size=18)\n",
-    "    ax.set_ylabel(ylabel,size=18)\n",
+    "    ax.set_xlabel(xlabel,size=18, weight='bold')\n",
+    "    ax.set_ylabel(ylabel,size=18, weight='bold')\n",
     "    \n",
     "    #ax.xaxis.set_major_locator(ticker.MaxNLocator(nbins=5))\n",
     "    ax.xaxis.set_minor_locator(ticker.MultipleLocator(50))\n",
