--- a/Spectral Decomposition - Optical - Halpha.ipynb
+++ b/Spectral Decomposition - Optical - Halpha.ipynb
@@ -181,7 +181,7 @@
     "plt.xlabel('Observed Wavelength (\\AA)')\n",
     "plt.ylabel('Flux')\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"standard_spectra.pdf\", format='pdf')\n",
+    "plt.savefig(\"Figure/standard_spectra.pdf\", format='pdf')\n",
     "plt.show()\n",
     "\n"
    ]
