--- a/Spectral Decomposition - Optical - Halpha.ipynb
+++ b/Spectral Decomposition - Optical - Halpha.ipynb
@@ -960,9 +960,7 @@
      ]
     }
    ],
-   "source": [
-    "print(len(guesses))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2342,7 +2340,7 @@
     "spec.unit = 'erg s$^{-1}$ cm$^{-2}$ $\\\\AA^{-1}$'\n",
     "spec.xarr.set_unit = u.angstrom #'$\\\\AA$'\n",
     "spec.xarr.xtype='angstrom'\n",
-    "spec.Registry.add_fitter('opticalagn',optical_agn_fitter(),35)\n",
+    "spec.Registry.add_fitter('opticalagn',optical_agn_fitter(),len(guesses))\n",
     "spec.specfit.selectregion(xmin=6000,xmax=7000)\n",
     "spec.specfit(fittype='opticalagn',vheight=False,guesses=guesses,tied=tied,fixed=fixed,parsteps=step,maxiter=500,baseline=False,subtract_baseline=False,quiet=False)"
    ]
