--- a/geocor_ corr.ipynb
+++ b/geocor_ corr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9eb3a2f0",
+   "id": "1063700c",
    "metadata": {},
    "source": [
     "# Georcoronal Correction\n"
@@ -10,17 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f3d06e98",
+   "execution_count": 1,
+   "id": "b9e55232",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import\n"
+    "# import\n",
+    "import pylatex"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2b80d461",
+   "id": "03a585d0",
    "metadata": {},
    "source": [
     "## Find the width of the lines in pixels and Angstroms.\n"
@@ -28,14 +29,40 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8371408",
+   "id": "36e01180",
    "metadata": {},
    "source": [
-    "Data we have:\n",
+    "## Projected Aperture Calculation\n",
     "\n",
-    "Grating Dispersion: 0.6 Angstorm / pixel\n",
+    "### Given Data\n",
+    "- **Aperture PSA width:** 0.2 arcseconds\n",
+    "- **COS Platescale:** 23.0 milliarcseconds/pixel = 0.023 arcseconds/pixel\n",
+    "- **Grating G140L Average Dispersion:** 0.6 Angstroms/pixel\n",
+    "- **Central Wavelength: 800 Angstrom\n",
+    "- **\n",
+    "\n",
+    "### Calculation\n",
+    "1. **Calculate the projected aperture width in pixels:**\n",
+    "\n",
+    "   $$\n",
+    "   \\text{Projected aperture width (pixels)} = \\frac{0.2 \\text{ arcseconds}}{0.023 \\text{ arcseconds per pixel}} = 8.7 \\text{ pixels}\n",
+    "   $$\n",
+    "\n",
+    "2. **Calculate the projected aperture width in Angstroms:**\n",
+    "\n",
+    "   $$\n",
+    "   \\text{Projected aperture width (Angstroms)} = 8.7 \\text{ pixels} \\times 0.6 \\text{ Angstroms per pixel} = 5.22 \\text{ Angstroms}\n",
+    "   $$\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84d8fd19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
