--- a/geocor_ corr.ipynb
+++ b/geocor_ corr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1063700c",
+   "id": "ebb83b97",
    "metadata": {},
    "source": [
     "# Georcoronal Correction\n"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b9e55232",
+   "id": "1394a205",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03a585d0",
+   "id": "13db4c2a",
    "metadata": {},
    "source": [
     "## Find the width of the lines in pixels and Angstroms.\n"
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36e01180",
+   "id": "1e806718",
    "metadata": {},
    "source": [
     "## Projected Aperture Calculation\n",
@@ -38,8 +38,8 @@
     "- **Aperture PSA width:** 0.2 arcseconds\n",
     "- **COS Platescale:** 23.0 milliarcseconds/pixel = 0.023 arcseconds/pixel\n",
     "- **Grating G140L Average Dispersion:** 0.6 Angstroms/pixel\n",
-    "- **Central Wavelength: 800 Angstrom\n",
-    "- **\n",
+    "- **Central Wavelength:** 800 Angstrom\n",
+    "- \n",
     "\n",
     "### Calculation\n",
     "1. **Calculate the projected aperture width in pixels:**\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84d8fd19",
+   "id": "dd6ff474",
    "metadata": {},
    "outputs": [],
    "source": []
