--- a/geocor_ corr.ipynb
+++ b/geocor_ corr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ebb83b97",
+   "id": "cd6ed05f",
    "metadata": {},
    "source": [
     "# Georcoronal Correction\n"
@@ -10,18 +10,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "1394a205",
+   "execution_count": 4,
+   "id": "eb712711",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import\n",
-    "import pylatex"
+    "%matplotlib inline\n",
+    "import os,sys\n",
+    "import matplotlib\n",
+    "import numpy as np\n",
+    "from astropy.io import fits\n",
+    "import matplotlib.pyplot as plt\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "import csv\n",
+    "import pandas as pd\n",
+    "import sfdmap\n",
+    "import extinction\n",
+    "from astropy import units as u\n",
+    "import math\n",
+    "import pylatex\n",
+    "\n",
+    "# pyqsofit\n",
+    "from scipy import interpolate\n",
+    "\n",
+    "# for SDSS SQL queries\n",
+    "import mechanize\n",
+    "from io import BytesIO\n",
+    "\n",
+    "import glob,timeit\n",
+    "\n",
+    "#sys.path.append('/Users/runnojc1/Software/py/pyspeckit')\n",
+    "import pyspeckit\n",
+    "from pyspeckit.spectrum.models.inherited_gaussfitter import gaussian\n",
+    "from pyspeckit.specwarnings import PyspeckitWarning\n",
+    "from astropy.table import Table"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "13db4c2a",
+   "id": "db1a9294",
    "metadata": {},
    "source": [
     "## Find the width of the lines in pixels and Angstroms.\n"
@@ -29,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e806718",
+   "id": "58e84b5f",
    "metadata": {},
    "source": [
     "## Projected Aperture Calculation\n",
@@ -59,10 +88,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd6ff474",
+   "id": "81e47b50",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Reading Table"
+   ]
   }
  ],
  "metadata": {
