--- a/geocor_ corr.ipynb
+++ b/geocor_ corr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cd6ed05f",
+   "id": "fee745de",
    "metadata": {},
    "source": [
     "# Georcoronal Correction\n"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eb712711",
+   "id": "b98fc01e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +49,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "60231aea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filename: HET/combined_spectrum_20230113_0000022_exp01.fits\n",
+      "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
+      "  0  PRIMARY       1 PrimaryHDU       4   ()      \n",
+      "  1                1 BinTableHDU     18   8256R x 5C   [D, D, D, D, D]   \n",
+      "HDU Header:\n",
+      "SIMPLE  =                    T / conforms to FITS standard                      \n",
+      "BITPIX  =                    8 / array data type                                \n",
+      "NAXIS   =                    0 / number of array dimensions                     \n",
+      "EXTEND  =                    T                                                  \n"
+     ]
+    }
+   ],
+   "source": [
+    "## Reading table to get the table header\n",
+    "file_path = 'HET/combined_spectrum_20230113_0000022_exp01.fits'\n",
+    "\n",
+    "with fits.open(file_path) as hdulist:\n",
+    "    hdulist.info()\n",
+    "    hdu_header = hdulist[0].header\n",
+    "    print(\"HDU Header:\")\n",
+    "    print(repr(hdu_header))\n",
+    "    \n"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "db1a9294",
+   "id": "8d93419f",
    "metadata": {},
    "source": [
     "## Find the width of the lines in pixels and Angstroms.\n"
@@ -58,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58e84b5f",
+   "id": "cb5f6353",
    "metadata": {},
    "source": [
     "## Projected Aperture Calculation\n",
@@ -88,12 +122,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81e47b50",
+   "id": "7b92a894",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## Reading Table"
-   ]
+   "source": []
   }
  ],
  "metadata": {
