--- a/geocor_ corr.ipynb
+++ b/geocor_ corr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "374614ec",
+   "id": "9c0eb7a8",
    "metadata": {},
    "source": [
     "# Georcoronal Correction\n"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2008574d",
+   "id": "b2ddf209",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a96dee79",
+   "id": "57cbfc49",
    "metadata": {},
    "source": [
     "## Data"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f4b0e34e",
+   "id": "c631b9da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,8 +78,211 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b1124e55",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SIMPLE  =                    T / conforms to FITS standard\n",
+      "BITPIX  =                    8 / array data type\n",
+      "NAXIS   =                    0 / number of array dimensions\n",
+      "EXTEND  =                    T\n",
+      "NEXTEND =                    1 / Number of standard extensions\n",
+      "DATE    = '2023-01-07'         / date this file was written (yyyy-mm-dd)\n",
+      "FILENAME= 'lf0a01010_x1dsum.fits' / name of file\n",
+      "FILETYPE= 'SCI      '          / type of data found in data file\n",
+      "\n",
+      "TELESCOP= 'HST'                / telescope used to acquire data\n",
+      "INSTRUME= 'COS   '             / identifier for instrument used to acquire data\n",
+      "EQUINOX =               2000.0 / equinox of celestial coord. system\n",
+      "\n",
+      "/ DATA DESCRIPTION KEYWORDS\n",
+      "\n",
+      "ROOTNAME= 'lf0a01awq                         ' / rootname of the observation set\n",
+      "IMAGETYP= 'TIME-TAG          ' / type of exposure identifier\n",
+      "PRIMESI = 'COS   '             / instrument designated as prime\n",
+      "\n",
+      "/ TARGET INFORMATION\n",
+      "\n",
+      "TARGNAME= '2MASS-J14301603+2303445        ' / proposer's target name\n",
+      "RA_TARG =   2.175668860413E+02 / right ascension of the target (deg) (J2000)\n",
+      "DEC_TARG=   2.306234565117E+01 / declination of the target (deg) (J2000)\n",
+      "\n",
+      "/ PROPOSAL INFORMATION\n",
+      "\n",
+      "PROPOSID=                17208 / PEP proposal identifier\n",
+      "LINENUM = '01.002         '    / proposal logsheet line number\n",
+      "PR_INV_L= 'Runnoe                        ' / last name of principal investigator\n",
+      "PR_INV_F= 'Jessie              ' / first name of principal investigator\n",
+      "PR_INV_M= 'Caye                ' / middle name / initial of principal investigat\n",
+      "\n",
+      "/ SUMMARY EXPOSURE INFORMATION\n",
+      "\n",
+      "QUALCOM1= '                                                                    '\n",
+      "QUALCOM2= '                                                                    '\n",
+      "QUALCOM3= '                                                                    '\n",
+      "QUALITY = '                                                                    '\n",
+      "\n",
+      "/ TARGET OFFSETS (POSTARGS)\n",
+      "\n",
+      "POSTARG1=             0.000000 / POSTARG in axis 1 direction\n",
+      "POSTARG2=             0.000000 / POSTARG in axis 2 direction\n",
+      "\n",
+      "/ DIAGNOSTIC KEYWORDS\n",
+      "\n",
+      "PROCTIME=   5.995126337963E+04 / pipeline processing time (MJD)\n",
+      "OPUS_VER= 'HSTDP 2022_3                ' / data processing software system versi\n",
+      "AWSYSVER= '                            ' / cloud infrastructure package version\n",
+      "AWSDPVER= '                            ' / cloud docker image version\n",
+      "CSYS_VER= 'caldp_20221010'     / calibration software system version id\n",
+      "CAL_VER = '3.4.3   '           / CALCOS code version\n",
+      "\n",
+      "/ SCIENCE INSTRUMENT CONFIGURATION\n",
+      "\n",
+      "OBSTYPE = 'SPECTROSCOPIC '     / observation type - imaging or spectroscopic\n",
+      "OBSMODE = 'TIME-TAG  '         / operating mode\n",
+      "EXPTYPE = 'EXTERNAL/SCI'       / type of exposure\n",
+      "DETECTOR= 'FUV'                / FUV or NUV\n",
+      "DETECTHV= 'NomA    '           / FUV High voltage state, from LDCSTATE\n",
+      "COSCOORD= 'USER    '           / COS output coordinate frame\n",
+      "SUBARRAY=                    T / data from a subarray (T) or full frame (F)\n",
+      "LAMPPLAN= 'P1            '     / Name of lamp that was planned to be used\n",
+      "LAMPUSED= 'P1      '           / lamp status, NONE or name of lamp which is on\n",
+      "LAMPSET = 'Medium'             / spectral cal lamp current value (milliamps)\n",
+      "LIFE_ADJ=                    3 / Life Time Adjustment Position\n",
+      "EXP_NUM =                    1 / exposure number for repeated observations\n",
+      "NRPTEXP =                    1 / number of repeat exposures in set: default 1\n",
+      "MFPPOS  = '1, 2, 3, 4'\n",
+      "CENWAVE =                  800 / central wavelength of spectrum\n",
+      "MCENWAVE= '800     '\n",
+      "APERTURE= 'PSA '               / aperture name\n",
+      "PROPAPER= 'PSA             '   / proposed aperture name\n",
+      "APER_FOV= '2.5 arcsec (0.700 mm) diameter circular' / aperture field of view\n",
+      "APMPOS  = 'PSA-FUV3'           / Aperture Mechanism Position from telemetry\n",
+      "APERXPOS=                 22.1 / Aperture Block Position dispersion (telemetry)\n",
+      "APERYPOS=                182.1 / Aperture Block Pos. cross dispersion(telemetry)\n",
+      "OPT_ELEM= 'G140L   '           / optical element in use\n",
+      "SHUTTER = 'Open '              / External Shutter Position (OPEN, CLOSED)\n",
+      "EXTENDED= 'NO '                / Is target specified as extended object?\n",
+      "TAGFLASH= 'AUTO            '   / Type of flashed exposures in time-tag\n",
+      "\n",
+      "/ CALIBRATION SWITCHES: PERFORM, OMIT, COMPLETE\n",
+      "\n",
+      "FLATCORR= 'COMPLETE'           / apply flat-field correction\n",
+      "DEADCORR= 'COMPLETE'           / correct for deadtime\n",
+      "DQICORR = 'COMPLETE'           / data quality initialization\n",
+      "STATFLAG=                    T / Calculate statistics?\n",
+      "TEMPCORR= 'COMPLETE'           / correct for thermal distortion\n",
+      "GEOCORR = 'COMPLETE'           / correct FUV for geometic distortion\n",
+      "DGEOCORR= 'OMIT    '           / Delta Corrections to FUV Geometric Distortion\n",
+      "IGEOCORR= 'COMPLETE'           / interpolate geometric distortion in INL file\n",
+      "RANDCORR= 'COMPLETE'           / add pseudo-random numbers to raw x and y\n",
+      "RANDSEED=           1673072413 / seed for pseudo-random number generator\n",
+      "XWLKCORR= 'COMPLETE'           / Correct FUV for Walk Distortion in X\n",
+      "YWLKCORR= 'COMPLETE'           / Correct FUV for Walk Distortion in Y\n",
+      "PHACORR = 'COMPLETE'           / filter by pulse-height\n",
+      "TRCECORR= 'COMPLETE'           / trace correction\n",
+      "ALGNCORR= 'COMPLETE'           / align data to profile\n",
+      "XTRCTALG= 'TWOZONE '           / BOXCAR or TWOZONE\n",
+      "BADTCORR= 'OMIT    '           / filter by time (excluding bad time intervals)\n",
+      "DOPPCORR= 'COMPLETE'           / orbital Doppler correction\n",
+      "HELCORR = 'COMPLETE'           / heliocentric Doppler correction\n",
+      "X1DCORR = 'COMPLETE'           / 1-D spectral extraction\n",
+      "BACKCORR= 'COMPLETE'           / subtract background (when doing 1-D extraction)\n",
+      "WAVECORR= 'COMPLETE'           / use wavecal to adjust wavelength zeropoint\n",
+      "FLUXCORR= 'COMPLETE'           / convert count-rate to absolute flux units\n",
+      "BRSTCORR= 'OMIT    '           / switch controlling search for FUV bursts\n",
+      "TDSCORR = 'COMPLETE'           / switch for time-dependent sensitivity correctio\n",
+      "\n",
+      "/ CALIBRATION REFERENCE FILES\n",
+      "\n",
+      "FLATFILE= 'lref$z6n16117l_flat.fits' / Pixel to Pixel Flat Field Reference File\n",
+      "DEADTAB = 'lref$s7g1700gl_dead.fits' / Deadtime Reference Table\n",
+      "BPIXTAB = 'lref$69m20528l_bpix.fits' / bad pixel table\n",
+      "SPOTTAB = 'lref$69f20032l_spot.fits' / Transient Bad Pixel Table\n",
+      "GSAGTAB = 'lref$5b919208l_gsag.fits' / ext. 34 for FUVA\n",
+      "HVTAB   = 'N/A                    ' / High voltage command level Reference Table\n",
+      "BRFTAB  = 'lref$x1u1459il_brf.fits' / Baseline Reference Frame Reference Table\n",
+      "GEOFILE = 'lref$x1u1459gl_geo.fits' / Geometric Correction Reference File\n",
+      "DGEOFILE= 'N/A                    ' / Delta Geometric Correction Reference Image\n",
+      "TRACETAB= 'lref$5b91919sl_trace.fits' / 1D spectral trace table\n",
+      "PROFTAB = 'lref$5b91920fl_profile.fits' / 2D spectrum profile table\n",
+      "TWOZXTAB= 'lref$5b919203l_2zx.fits' / Two-zone spectral extraction parameters\n",
+      "XWLKFILE= 'lref$14o2013ql_xwalk.fits' / X Walk Correction Lookup Reference Image\n",
+      "YWLKFILE= 'lref$14o2013rl_ywalk.fits' / Y Walk Correction Lookup Reference Image\n",
+      "PHATAB  = 'lref$wc318317l_pha.fits' / Pulse Height Discrimination Reference Tabl\n",
+      "PHAFILE = 'N/A                    ' / Pulse Height Threshold Reference File\n",
+      "BADTTAB = 'N/A                    ' / Bad Time Interval Reference Table\n",
+      "XTRACTAB= 'lref$5b919206l_1dx.fits' / 1-D Spectral Extraction Information Table\n",
+      "LAMPTAB = 'lref$5b91919tl_lamp.fits' / template calibration lamp spectra table\n",
+      "DISPTAB = 'lref$5b919205l_disp.fits' / Dispersion Coefficient Reference Table\n",
+      "IMPHTTAB= 'N/A                    ' / Imaging photometric table\n",
+      "FLUXTAB = 'lref$62m19535l_phot.fits' / Spectroscopic flux calibration table\n",
+      "WCPTAB  = 'lref$u1t1616ql_wcp.fits' / wavecal parameters table\n",
+      "BRSTTAB = 'N/A                    ' / burst parameters table\n",
+      "TDSTAB  = 'lref$52m2056hl_tds.fits' / time-dependent sensitivity correction tabl\n",
+      "SPWCSTAB= 'lref$49g17154l_spwcs.fits' / Spectroscopic WCS Parameters Table\n",
+      "\n",
+      "/ ENGINEERING PARAMETERS FOR CALIBRATION\n",
+      "\n",
+      "MFPOFSET= '-2, -1, 0, 1'\n",
+      "\n",
+      "/ TARGET ACQUISITION DATASET IDENTIFIERS\n",
+      "\n",
+      "ACQSNAME= '          '         / rootname of first acquisition search exposure\n",
+      "ACQINAME= 'LF0A01AUx '         / rootname of first acquisition image exposure\n",
+      "PEAKXNAM= '          '         / Rootname of 1st cross-dispersion (XD) peakup\n",
+      "PEAKDNAM= '          '         / Rootname of 1st along-dispersion (AD) peakup\n",
+      "ACQ_NUM =                    1 / total number of exposures in acq sequence\n",
+      "\n",
+      "/ ARCHIVE SEARCH KEYWORDS\n",
+      "\n",
+      "BANDWID =    1167.275640115455 / bandwidth of the data\n",
+      "SPECRES =               2000.0 / approx. resolving power at central wavelength\n",
+      "CENTRWV =    1363.696060941282 / central wavelength of the data\n",
+      "MINWAVE =    780.0582408835545 / minimum wavelength in spectrum\n",
+      "MAXWAVE =     1947.33388099901 / maximum wavelength in spectrum\n",
+      "PLATESC =         0.0212314212 / plate scale (arcsec/pixel)\n",
+      "\n",
+      "/ PAPER PRODUCT SUPPORT KEYWORDS\n",
+      "\n",
+      "PROPTTL1= 'Tick Tock, Time''s Up: An Alternative to the Supermassive Black Hole'\n",
+      "PROPTTL2= 'Binary Scenario in J1430                                            '\n",
+      "OBSET_ID= '01'                 / observation set id\n",
+      "TARDESCR= 'GALAXY;SEYFERT                                                      '\n",
+      "TARDESC2= '                                                                    '\n",
+      "MTFLAG  = ' '                  / moving target flag; T if it is a moving target\n",
+      "PARALLAX=   0.000000000000E+00 / target parallax from proposal\n",
+      "MU_RA   =  -2.262009886373E-03 / target proper motion from proposal (degrees RA)\n",
+      "MU_DEC  =   2.044207925417E-03 / target proper motion from proposal (deg. DEC)\n",
+      "MU_EPOCH= 'J2016     '         / epoch of proper motion from proposal\n",
+      "\n",
+      "/ ASSOCIATION KEYWORDS\n",
+      "\n",
+      "ASN_ID  = 'LF0A01010 '         / unique identifier assigned to association\n",
+      "ASN_TAB = 'lf0a01010_asn.fits     ' / name of the association table\n",
+      "CRDS_CTX= 'hst_1059.pmap'\n",
+      "CRDS_VER= '11.16.9, b11.4.0, 64d96076d89b32a5687a6b77bb910ab93b3a99b3'\n"
+     ]
+    }
+   ],
+   "source": [
+    "hdr_file_path = 'ascii/J14301603+2303445_2023-01-06_COS_info.hdr'\n",
+    "\n",
+    "with open(hdr_file_path, 'r') as file:\n",
+    "    for line in file:\n",
+    "        print(line.strip())\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "11fc5b61",
+   "id": "8cbca1b3",
    "metadata": {},
    "source": [
     "## Find the width of the lines in pixels and Angstroms.\n"
@@ -87,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8a6e987",
+   "id": "1183e75c",
    "metadata": {},
    "source": [
     "## Projected Aperture Calculation\n",
@@ -97,7 +300,7 @@
     "- **COS Platescale:** 23.0 milliarcseconds/pixel = 0.023 arcseconds/pixel\n",
     "- **Grating G140L Average Dispersion:** 0.6 Angstroms/pixel\n",
     "- **Central Wavelength:** 800 Angstrom\n",
-    "- \n",
+    "- **Lifetime Position:** 3\n",
     "\n",
     "### Calculation\n",
     "1. **Calculate the projected aperture width in pixels:**\n",
@@ -116,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b355b6a1",
+   "id": "2f28ccd2",
    "metadata": {},
    "source": [
     "## Creating box profile in spctrum"
@@ -125,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "537edecc",
+   "id": "6aea24bc",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17afd26b",
+   "id": "c24ef250",
    "metadata": {},
    "source": [
     "# Cos Line Spread Function (LSF)"
@@ -206,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb8d3e93",
+   "id": "d101ed6c",
    "metadata": {},
    "outputs": [],
    "source": []
