--- a/geocor_ corr.ipynb
+++ b/geocor_ corr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9c0eb7a8",
+   "id": "fb61b8fe",
    "metadata": {},
    "source": [
     "# Georcoronal Correction\n"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b2ddf209",
+   "id": "3dca7377",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57cbfc49",
+   "id": "5e74a507",
    "metadata": {},
    "source": [
     "## Data"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c631b9da",
+   "id": "bf222513",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b1124e55",
+   "id": "eee55ed5",
    "metadata": {
     "scrolled": false
    },
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cbca1b3",
+   "id": "10080acf",
    "metadata": {},
    "source": [
     "## Find the width of the lines in pixels and Angstroms.\n"
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1183e75c",
+   "id": "dbe5242c",
    "metadata": {},
    "source": [
     "## Projected Aperture Calculation\n",
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f28ccd2",
+   "id": "b270ecbb",
    "metadata": {},
    "source": [
     "## Creating box profile in spctrum"
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6aea24bc",
+   "id": "6c305701",
    "metadata": {},
    "outputs": [
     {
@@ -400,19 +400,72 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c24ef250",
+   "id": "c5beb7f6",
    "metadata": {},
    "source": [
-    "# Cos Line Spread Function (LSF)"
+    "# COS Line Spread Function (LSF)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "764425be",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'astroquery'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 15\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mastropy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconvolution\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m convolve\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# Import for: downloading the data\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mastroquery\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmast\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Observations\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m#Import for: interpolating a discretized function\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01minterpolate\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m interp1d\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'astroquery'"
+     ]
+    }
+   ],
+   "source": [
+    "# Import for: array manipulation\n",
+    "import numpy as np\n",
+    "\n",
+    "# Import for: reading fits files\n",
+    "from astropy.table import Table\n",
+    "from astropy.io import fits\n",
+    "\n",
+    "# Import for: line profile functions\n",
+    "from astropy.modeling import functional_models\n",
+    "\n",
+    "# Import for: convolutions\n",
+    "from astropy.convolution import convolve\n",
+    "\n",
+    "# Import for: downloading the data\n",
+    "from astroquery.mast import Observations\n",
+    "\n",
+    "#Import for: interpolating a discretized function\n",
+    "from scipy.interpolate import interp1d\n",
+    "\n",
+    "#Import for: plotting\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "#Import for: downloading COS' LSF files within python\n",
+    "import urllib \n",
+    "\n",
+    "#Import for: unzipping a compressed file of STIS data\n",
+    "import tarfile\n",
+    "\n",
+    "#Import for: working with system paths\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d101ed6c",
+   "id": "1abc5bc5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!pip install astro"
+   ]
   }
  ],
  "metadata": {
