--- a/geocor_ corr.ipynb
+++ b/geocor_ corr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d6b53394",
+   "id": "82435401",
    "metadata": {},
    "source": [
     "# Georcoronal Correction\n"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d5c2dd75",
+   "id": "6de293a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57c48d04",
+   "id": "5b964a77",
    "metadata": {},
    "source": [
     "## Data"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a34a2b41",
+   "id": "cc63ea73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "695d9366",
+   "id": "174df787",
    "metadata": {
     "scrolled": false
    },
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29527ef3",
+   "id": "8de1b392",
    "metadata": {},
    "source": [
     "## Find the width of the lines in pixels and Angstroms.\n"
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9232ecec",
+   "id": "1c25cbb9",
    "metadata": {},
    "source": [
     "## Projected Aperture Calculation\n",
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d3379c2",
+   "id": "f9936cb3",
    "metadata": {},
    "source": [
     "## Creating box profile in spctrum"
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d887db49",
+   "id": "4f71cf48",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81480c7b",
+   "id": "2f0c1972",
    "metadata": {},
    "source": [
     "# COS Line Spread Function (LSF)"
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9f9b48af",
+   "id": "ce94038c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,8 +428,179 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "dffd90c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, None, None)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# These will be important directories for the Notebook\n",
+    "\n",
+    "cwd = Path(\".\")\n",
+    "datadir = cwd / \"data\"\n",
+    "outputdir = cwd / \"output\"\n",
+    "plotsdir = cwd / \"output\" / \"plots\"\n",
+    "\n",
+    "# Make the directories if they don't exist\n",
+    "datadir.mkdir(exist_ok=True), outputdir.mkdir(exist_ok=True), plotsdir.mkdir(exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "10904c07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading URL https://mast.stsci.edu/api/v0.1/Download/file?uri=mast:HST/product/lf0a01010_x1dsum.fits to data\\mastDownload\\HST\\lf0a01010\\lf0a01010_x1dsum.fits ... [Done]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Search for obs_id of files, generate data product list\n",
+    "pl = Observations.get_product_list(\n",
+    "    Observations.query_criteria(obs_id=\"LF0A01010\")\n",
+    ")  \n",
+    "\n",
+    "download = Observations.download_products(\n",
+    "    pl[pl[\"productSubGroupDescription\"] == \"X1DSUM\"],  # filter and download searched files\n",
+    "    download_dir=str(datadir),\n",
+    ")\n",
+    "\n",
+    "# Give the program the path to your downloaded data\n",
+    "fuvFile = download[\"Local Path\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "ceb41c5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For the file data\\mastDownload\\HST\\lf0a01010\\lf0a01010_x1dsum.fits, the relevant parameters are: \n",
+      "DETECTOR = FUV\n",
+      "OPT_ELEM = G140L\n",
+      "LIFE_ADJ = 3\n",
+      "CENWAVE = 800\n",
+      "DISPTAB = 5b919205l_disp.fits\n"
+     ]
+    }
+   ],
+   "source": [
+    "fuvHeader0 = fits.getheader(fuvFile, ext=0)  # Select the primary header\n",
+    "print(f\"For the file {fuvFile}, the relevant parameters are: \")\n",
+    "param_dict = {}  # Make a dict to store what you find here\n",
+    "\n",
+    "for hdrKeyword in [\n",
+    "    \"DETECTOR\",\n",
+    "    \"OPT_ELEM\",\n",
+    "    \"LIFE_ADJ\",\n",
+    "    \"CENWAVE\",\n",
+    "    \"DISPTAB\",\n",
+    "]:  # Print out the relevant values\n",
+    "    try:  # For DISPTAB\n",
+    "        value = fuvHeader0[hdrKeyword].split(\"$\")[1]  # Save the key/value pairs to the dictionary\n",
+    "        param_dict[hdrKeyword] = value                # DISPTAB needs the split here\n",
+    "    except:  # For other params\n",
+    "        value = fuvHeader0[hdrKeyword]  # Save the key/value pairs to the dictionary\n",
+    "        param_dict[hdrKeyword] = value\n",
+    "    print(f\"{hdrKeyword} = {value}\")  # Print the key/value pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "5c060645",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fetch_files(det, grating, lpPos, cenwave, disptab):\n",
+    "    \"\"\"\n",
+    "    Given all the inputs: (detector, grating, LP-POS, cenwave, dispersion table,) this will download both\n",
+    "    the LSF file and Disptab file you should use in the convolution and return their paths.\n",
+    "    Returns:\n",
+    "    LSF_file_name (str): filename of the new downloaded LSF file\n",
+    "    disptab_path (str): path to the new downloaded disptab file\n",
+    "    \"\"\"\n",
+    "    COS_site_rootname = (\n",
+    "        \"https://www.stsci.edu/files/live/sites/www/files/home/hst/instrumentation/cos/\"\n",
+    "        \"performance/spectral-resolution/_documents/\"\n",
+    "    )  # Link to where all the files live - split into 2 lines\n",
+    "    if det == \"NUV\":  # Only one file for NUV\n",
+    "        LSF_file_name = \"nuv_model_lsf.dat\"\n",
+    "    elif det == \"FUV\":  # FUV files follow a naming pattern\n",
+    "        LSF_file_name = f\"aa_LSFTable_{grating}_{cenwave}_LP{lpPos}_cn.dat\"\n",
+    "\n",
+    "    LSF_file_webpath = COS_site_rootname + LSF_file_name  # Where to find file online\n",
+    "    urllib.request.urlretrieve(\n",
+    "        LSF_file_webpath, str(datadir / LSF_file_name)\n",
+    "    )  # Where to save file to locally\n",
+    "    print(f\"Downloaded LSF file to {str(datadir/ LSF_file_name)}\")\n",
+    "\n",
+    "    # And we'll need to get the DISPTAB file as well\n",
+    "    disptab_path = str(datadir / disptab)\n",
+    "    urllib.request.urlretrieve(\n",
+    "        f\"https://hst-crds.stsci.edu/unchecked_get/references/hst/{disptab}\",\n",
+    "        disptab_path,\n",
+    "    )\n",
+    "    print(f\"Downloaded DISPTAB file to {disptab_path}\")\n",
+    "\n",
+    "    return LSF_file_name, disptab_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e705760f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "HTTPError",
+     "evalue": "HTTP Error 404: Not Found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[36], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# We'll pass that fetch function the parameters we determined earlier\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# This \"unpacked argument\" phrasing works because of the order in which we added the params to the dict\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m LSF_file_name, disptab_path \u001b[38;5;241m=\u001b[39m fetch_files(\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mlist\u001b[39m(param_dict\u001b[38;5;241m.\u001b[39mvalues()))\n",
+      "Cell \u001b[1;32mIn[35], line 19\u001b[0m, in \u001b[0;36mfetch_files\u001b[1;34m(det, grating, lpPos, cenwave, disptab)\u001b[0m\n\u001b[0;32m     16\u001b[0m     LSF_file_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maa_LSFTable_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgrating\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcenwave\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_LP\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlpPos\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_cn.dat\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     18\u001b[0m LSF_file_webpath \u001b[38;5;241m=\u001b[39m COS_site_rootname \u001b[38;5;241m+\u001b[39m LSF_file_name  \u001b[38;5;66;03m# Where to find file online\u001b[39;00m\n\u001b[1;32m---> 19\u001b[0m urllib\u001b[38;5;241m.\u001b[39mrequest\u001b[38;5;241m.\u001b[39murlretrieve(\n\u001b[0;32m     20\u001b[0m     LSF_file_webpath, \u001b[38;5;28mstr\u001b[39m(datadir \u001b[38;5;241m/\u001b[39m LSF_file_name)\n\u001b[0;32m     21\u001b[0m )  \u001b[38;5;66;03m# Where to save file to locally\u001b[39;00m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDownloaded LSF file to \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(datadir\u001b[38;5;241m/\u001b[39m\u001b[38;5;250m \u001b[39mLSF_file_name)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     24\u001b[0m \u001b[38;5;66;03m# And we'll need to get the DISPTAB file as well\u001b[39;00m\n",
+      "File \u001b[1;32m~\\anaconda4\\Lib\\urllib\\request.py:241\u001b[0m, in \u001b[0;36murlretrieve\u001b[1;34m(url, filename, reporthook, data)\u001b[0m\n\u001b[0;32m    224\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    225\u001b[0m \u001b[38;5;124;03mRetrieve a URL into a temporary location on disk.\u001b[39;00m\n\u001b[0;32m    226\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    237\u001b[0m \u001b[38;5;124;03mdata file as well as the resulting HTTPMessage object.\u001b[39;00m\n\u001b[0;32m    238\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    239\u001b[0m url_type, path \u001b[38;5;241m=\u001b[39m _splittype(url)\n\u001b[1;32m--> 241\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m contextlib\u001b[38;5;241m.\u001b[39mclosing(urlopen(url, data)) \u001b[38;5;28;01mas\u001b[39;00m fp:\n\u001b[0;32m    242\u001b[0m     headers \u001b[38;5;241m=\u001b[39m fp\u001b[38;5;241m.\u001b[39minfo()\n\u001b[0;32m    244\u001b[0m     \u001b[38;5;66;03m# Just return the local path and the \"headers\" for file://\u001b[39;00m\n\u001b[0;32m    245\u001b[0m     \u001b[38;5;66;03m# URLs. No sense in performing a copy unless requested.\u001b[39;00m\n",
+      "File \u001b[1;32m~\\anaconda4\\Lib\\urllib\\request.py:216\u001b[0m, in \u001b[0;36murlopen\u001b[1;34m(url, data, timeout, cafile, capath, cadefault, context)\u001b[0m\n\u001b[0;32m    214\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    215\u001b[0m     opener \u001b[38;5;241m=\u001b[39m _opener\n\u001b[1;32m--> 216\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m opener\u001b[38;5;241m.\u001b[39mopen(url, data, timeout)\n",
+      "File \u001b[1;32m~\\anaconda4\\Lib\\urllib\\request.py:525\u001b[0m, in \u001b[0;36mOpenerDirector.open\u001b[1;34m(self, fullurl, data, timeout)\u001b[0m\n\u001b[0;32m    523\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m processor \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprocess_response\u001b[38;5;241m.\u001b[39mget(protocol, []):\n\u001b[0;32m    524\u001b[0m     meth \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(processor, meth_name)\n\u001b[1;32m--> 525\u001b[0m     response \u001b[38;5;241m=\u001b[39m meth(req, response)\n\u001b[0;32m    527\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
+      "File \u001b[1;32m~\\anaconda4\\Lib\\urllib\\request.py:634\u001b[0m, in \u001b[0;36mHTTPErrorProcessor.http_response\u001b[1;34m(self, request, response)\u001b[0m\n\u001b[0;32m    631\u001b[0m \u001b[38;5;66;03m# According to RFC 2616, \"2xx\" code indicates that the client's\u001b[39;00m\n\u001b[0;32m    632\u001b[0m \u001b[38;5;66;03m# request was successfully received, understood, and accepted.\u001b[39;00m\n\u001b[0;32m    633\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;241m200\u001b[39m \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m code \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m300\u001b[39m):\n\u001b[1;32m--> 634\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparent\u001b[38;5;241m.\u001b[39merror(\n\u001b[0;32m    635\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttp\u001b[39m\u001b[38;5;124m'\u001b[39m, request, response, code, msg, hdrs)\n\u001b[0;32m    637\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
+      "File \u001b[1;32m~\\anaconda4\\Lib\\urllib\\request.py:563\u001b[0m, in \u001b[0;36mOpenerDirector.error\u001b[1;34m(self, proto, *args)\u001b[0m\n\u001b[0;32m    561\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m http_err:\n\u001b[0;32m    562\u001b[0m     args \u001b[38;5;241m=\u001b[39m (\u001b[38;5;28mdict\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdefault\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhttp_error_default\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m+\u001b[39m orig_args\n\u001b[1;32m--> 563\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_call_chain(\u001b[38;5;241m*\u001b[39margs)\n",
+      "File \u001b[1;32m~\\anaconda4\\Lib\\urllib\\request.py:496\u001b[0m, in \u001b[0;36mOpenerDirector._call_chain\u001b[1;34m(self, chain, kind, meth_name, *args)\u001b[0m\n\u001b[0;32m    494\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m handler \u001b[38;5;129;01min\u001b[39;00m handlers:\n\u001b[0;32m    495\u001b[0m     func \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(handler, meth_name)\n\u001b[1;32m--> 496\u001b[0m     result \u001b[38;5;241m=\u001b[39m func(\u001b[38;5;241m*\u001b[39margs)\n\u001b[0;32m    497\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m result \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    498\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m result\n",
+      "File \u001b[1;32m~\\anaconda4\\Lib\\urllib\\request.py:643\u001b[0m, in \u001b[0;36mHTTPDefaultErrorHandler.http_error_default\u001b[1;34m(self, req, fp, code, msg, hdrs)\u001b[0m\n\u001b[0;32m    642\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mhttp_error_default\u001b[39m(\u001b[38;5;28mself\u001b[39m, req, fp, code, msg, hdrs):\n\u001b[1;32m--> 643\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m HTTPError(req\u001b[38;5;241m.\u001b[39mfull_url, code, msg, hdrs, fp)\n",
+      "\u001b[1;31mHTTPError\u001b[0m: HTTP Error 404: Not Found"
+     ]
+    }
+   ],
+   "source": [
+    "# We'll pass that fetch function the parameters we determined earlier\n",
+    "# This \"unpacked argument\" phrasing works because of the order in which we added the params to the dict\n",
+    "LSF_file_name, disptab_path = fetch_files(*list(param_dict.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7f80eaca",
+   "id": "83695d5a",
    "metadata": {},
    "outputs": [],
    "source": []
