--- a/geocor_ corr.ipynb
+++ b/geocor_ corr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8ccf52d7",
+   "id": "7bc730f8",
    "metadata": {},
    "source": [
     "# Georcoronal Correction\n"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d0b655cd",
+   "id": "1a851b15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49773698",
+   "id": "5f21b4cf",
    "metadata": {},
    "source": [
     "## Data"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5060fea5",
+   "id": "275f3603",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "10b22963",
+   "id": "76aa3ae4",
    "metadata": {
     "scrolled": false
    },
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a78c9c5",
+   "id": "65bb1cc0",
    "metadata": {},
    "source": [
     "## Find the width of the lines in pixels and Angstroms.\n"
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2fb2990",
+   "id": "8e8c7c98",
    "metadata": {},
    "source": [
     "## Projected Aperture Calculation\n",
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3764ec8f",
+   "id": "e1fd4f17",
    "metadata": {},
    "source": [
     "## Creating box profile in spctrum"
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "da4d0264",
+   "id": "2340ee5d",
    "metadata": {},
    "outputs": [
     {
@@ -400,16 +400,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d8a711c",
+   "id": "f275272e",
    "metadata": {},
    "source": [
     "# COS Line Spread Function (LSF)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2d21068",
+   "metadata": {},
+   "source": [
+    "Copied a lot of codes from the following: https://github.com/spacetelescope/notebooks/blob/master/notebooks/COS/LSF/LSF.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "1864e5ab",
+   "id": "2f79be40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "011a87f5",
+   "id": "a62508fa",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b71000b3",
+   "id": "15332e6d",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "ca3b0982",
+   "id": "0dfc56a4",
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "037d638f",
+   "id": "b392698d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "498e0c07",
+   "id": "4e37f267",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70050fa1",
+   "id": "39caeeca",
    "metadata": {},
    "outputs": [],
    "source": []
