--- a/Spectral Decomposition - UV.ipynb
+++ b/Spectral Decomposition - UV.ipynb
@@ -131,7 +131,7 @@
     "    else:\n",
     "        pass\n",
     "\n",
-    "binned_wl = np.array(binned_wl)*(1+z) #\n",
+    "binned_wl = np.array(binned_wl)\n",
     "binned_flux = np.array(binned_flux)\n",
     "binned_flux_err = np.array(binned_flux_err)\n",
     "\n",
@@ -1844,6 +1844,14 @@
     "plt.show()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f601c6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
