--- a/geocor_ corr.ipynb
+++ b/geocor_ corr.ipynb
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f30fafa",
+   "id": "caf01d0a",
    "metadata": {},
    "source": [
     "#### Defining directories where files will be saved"
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6c37215",
+   "id": "2fedda88",
    "metadata": {},
    "source": [
     "#### Downloading the data files"
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c274226",
+   "id": "0d73c1fb",
    "metadata": {},
    "source": [
     "#### Getting info from the header of the downloaded files"
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79aface4",
+   "id": "4e683e85",
    "metadata": {},
    "source": [
     "#### Downloading the LSF file for the specific setup that was used"
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "12d8f519",
+   "id": "6ad1daad",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "478d4476",
+   "id": "a96a1549",
    "metadata": {},
    "source": [
     "#### Reading the LSF file"
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3f252b07",
+   "id": "df2e55e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2f452540",
+   "id": "aa47fca9",
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63b27a04",
+   "id": "ec54f550",
    "metadata": {},
    "source": [
     "#### Plotting the LSF kernel sampled"
@@ -767,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9523826c",
+   "id": "0f5040ec",
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ac6776d",
+   "id": "cffeea4d",
    "metadata": {},
    "source": [
     "#### Plotting LSF kernel for different wavelengths"
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c9f74e85",
+   "id": "02c6fd59",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3406fe3",
+   "id": "2afb9b47",
    "metadata": {},
    "source": [
     "#### Getting Dispersion parameters"
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "aec7c352",
+   "id": "d6bec2e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57cf11bf",
+   "id": "7b7c9413",
    "metadata": {},
    "source": [
     "#### Redefining the LSF"
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "41861f7d",
+   "id": "12185c1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e089461",
+   "id": "25d1e3d6",
    "metadata": {},
    "source": [
     "#### Plotting again with the new version:"
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4b857f92",
+   "id": "b0434c78",
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f4ad67e",
+   "id": "54057987",
    "metadata": {},
    "source": [
     "#### Applying convolution"
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c6f5e4f0",
+   "id": "d8dcbd2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "509d706d",
+   "id": "fb106c69",
    "metadata": {},
    "source": [
     "#### Creating a box profile"
@@ -1160,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5e1d5a6c",
+   "id": "1d6f9626",
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "205cdd0e",
+   "id": "d8f3856a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1224,7 +1224,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "b8ab0355",
+   "id": "69c57890",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e33081c0",
+   "id": "fb3d6282",
    "metadata": {},
    "source": [
     "# Multiply the profile by the inverse sensitivity function "
@@ -1271,7 +1271,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "e286e930",
+   "id": "d17ba9eb",
    "metadata": {},
    "outputs": [
     {
@@ -1295,70 +1295,20 @@
     "\n",
     "## Row 50 is for FUVA, G140L, PSA, 800 (Our config)\n",
     "wl= data[50][4]\n",
-    "flux = data[50][5]\n",
+    "sns = data[50][5]\n",
     "\n",
     "plt.figure(figsize=(10,6))\n",
-    "plt.plot(wl, flux)\n",
-    "plt.xlabel(\"Wavelength\")\n",
-    "plt.ylabel(\"Sensitivity\")\n",
+    "plt.plot(wl, sns)\n",
+    "plt.xlabel(\"Wavelength\") # Unit: Angstrom\n",
+    "plt.ylabel(\"Sensitivity\") # Unit: (count s–1 pixel–1)/(erg s–1 cm–2 Angstrom–1)\n",
     "#plt.xlim(1290,1320)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "66c3af4e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XTENSION\n",
-      "BITPIX\n",
-      "NAXIS\n",
-      "NAXIS1\n",
-      "NAXIS2\n",
-      "PCOUNT\n",
-      "GCOUNT\n",
-      "TFIELDS\n",
-      "EXTNAME\n",
-      "CHECKSUM\n",
-      "DATASUM\n",
-      "TTYPE1\n",
-      "TFORM1\n",
-      "TDISP1\n",
-      "TTYPE2\n",
-      "TFORM2\n",
-      "TDISP2\n",
-      "TTYPE3\n",
-      "TFORM3\n",
-      "TUNIT3\n",
-      "TDISP3\n",
-      "TTYPE4\n",
-      "TFORM4\n",
-      "TDISP4\n",
-      "TTYPE5\n",
-      "TFORM5\n",
-      "TUNIT5\n",
-      "TDISP5\n",
-      "TTYPE6\n",
-      "TFORM6\n",
-      "TUNIT6\n",
-      "TDISP6\n"
-     ]
-    }
-   ],
-   "source": [
-    "for line in header:\n",
-    "    print(line)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "af5fa001",
+   "id": "4192bf59",
    "metadata": {},
    "outputs": [],
    "source": []
